fixed align

--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ h2{
     margin-bottom: 1rem;
     text-align: center;
 }
+h1{
+    text-align: center;
+}
 ol{
     display: flex;
     flex-wrap: wrap;
